--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -1,45 +1,44 @@
-
-
 name: login
 
-
 on:
-
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-
   workflow_dispatch:
 
-
-
 jobs:
-
   build:
+    runs-on: ubuntu-latest
 
-      runs-on: ubuntu-latest
+    steps:
+      # Step 1: Checkout do código
+      - uses: actions/checkout@v3
 
-      steps:
+      # Step 2: Verificar versões do Newman e Node.js
+      - name: Check versions of Newman and Node.js
+        run: |
+          newman --version || echo "Newman not installed"
+          node --version
 
-        - uses: actions/checkout@v3
+      # Step 3: Instalar o reporter htmlextra
+      - name: Install Newman Reporter Htmlextra
+        run: npm install -g newman-reporter-htmlextra
 
-        - name: set 1 check version Newman and Node
-        run: | 
-              newman --version
-              node --version
+      # Step 4: Executar a coleção do Postman
+      - name: Run Newman Collection
+        run: |
+          mkdir -p ./result
+          newman run ./2_Login.json -g ./globals.json -e ./Postman.json \
+          --delay-request 1 --reporters cli,htmlextra --reporter-htmlextra-export ./result/Report.html
 
-        - name: Step 2 Install Newman-Reporter-Htmlextra
-          run: Sudo npm install -g newman-reporter-htmlextra
+      # Step 5: Salvar o relatório como artefato
+      - name: Upload Report Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: report
+          path: ./result/Report.html
 
-         - name: Step 3 Execute collection
-           run: newman run ./2_Login.json -g ./globals.json -e ./Postman.json --delay-request 1 --reporters cli, -r htmlextra-export ./result/Report.html
-
-         - name: Step 4 Archive production artifacts
-           uses: action/upload-artifact@v3
-           with:
-                 name: report
                  path: ./result/Report.html
 
 
